testdata/e2e/examples/script-env/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: script-env
spec:
  bindings:
  - name: chainsaw
    value: chainsaw
  steps:
  - bindings:
    - name: hello
      value: hello
    try:
    - script:
        env:
        - name: GREETINGS
          value: (join(' ', [$hello, $chainsaw]))
        content: echo $GREETINGS
        check:
          ($error): ~
          (trim_space($stdout)): hello chainsaw
    - command:
        env:
        - name: GREETINGS
          value: (join(' ', [$hello, $chainsaw]))
        entrypoint: echo
        args:
        - $GREETINGS
        check:
          ($error): ~
          (trim_space($stdout)): hello chainsaw
